--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home MyShopZon</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Became a Seller</a>
+                <a class="nav-link" href="#">Top Fashion deals</a>
               </li>
               <li class="nav-item Sign in">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -64,6 +64,25 @@
         Appliances
         <img src="./Appliances.webp" width="25%" class="img-fluid" alt="...">
       </button>
+
+      <div class="Became a Sellers">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Became a Sellers
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Register</a></li>
+          <li><a class="dropdown-item" href="#">Log in</a></li>
+          <li><a class="dropdown-item" href="#">Seller Payments</a></li>
+        </ul>
+      </div>
+
+
+
+
+
+
+
+
       <img src="./banner.webp" class="img-fluid" alt="...">
       <h1>Best of Electronics</h1>
       <img src="img1.jpg" class="img-fluid" width="30%" alt="...">
@@ -147,7 +166,59 @@
         <h3>MyShopZon</h3>
         <a href=""></a>
     </section>
+    <h1>Log in/sign Up</h1>
 </main>
+<div class="row g-3">
+  <div class="col">
+    <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+  </div>
+  <div class="col">
+    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+  </div>
+</div>
+<form class="row g-3">
+  <div class="col-md-6">
+    <label for="inputEmail4" class="form-label">Email</label>
+    <input type="email" class="form-control" id="inputEmail4">
+  </div>
+  <div class="col-md-6">
+    <label for="inputPassword4" class="form-label">Password</label>
+    <input type="password" class="form-control" id="inputPassword4">
+  </div>
+  <div class="col-12">
+    <label for="inputAddress" class="form-label">Address</label>
+    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+  </div>
+  <div class="col-12">
+    <label for="inputAddress2" class="form-label">Address 2</label>
+    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+  </div>
+  <div class="col-md-6">
+    <label for="inputCity" class="form-label">City</label>
+    <input type="text" class="form-control" id="inputCity">
+  </div>
+  <div class="col-md-4">
+    <label for="inputState" class="form-label">State</label>
+    <select id="inputState" class="form-select">
+      <option selected>Choose...</option>
+      <option>...</option>
+    </select>
+  </div>
+  <div class="col-md-2">
+    <label for="inputZip" class="form-label">Zip</label>
+    <input type="text" class="form-control" id="inputZip">
+  </div>
+  <div class="col-12">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="gridCheck">
+      <label class="form-check-label" for="gridCheck">
+        Check me out
+      </label>
+    </div>
+  </div>
+  <div class="col-12">
+    <button type="submit" class="btn btn-primary">Sign in</button>
+  </div>
 <footer>
     <a href="#">FAQ</a>
     <a href="#">Contact Us</a>
@@ -162,6 +233,7 @@
     <a href="#">Terms of Use</a>
     <a class="copyright" href="#">&copy; 2023 | MyShopzon.com</a>
 </footer>
+</form>
 </body>
 </html>
 </body>
