--- a/index.html
+++ b/index.html
@@ -44,6 +44,25 @@
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
+              <form>
+                <label>
+                  <input 
+                    type="checkbox" 
+                    checked={} 
+                  <h4>Only show products in stock.</h4>
+                </label>
+              </form>
+
+
+
+
+
+
+
+
+
+
+
             </form>
           </div>
         </div>
@@ -75,6 +94,23 @@
           <li><a class="dropdown-item" href="#">Seller Payments</a></li>
         </ul>
       </div>
+
+      <nav aria-label="...">
+        <ul class="pagination">
+          <li class="page-item disabled">
+            <span class="page-link">Previous</span>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item active" aria-current="page">
+            <span class="page-link">2</span>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
+        </ul>
+      </nav>
+
 
 
 
