--- a/index.html
+++ b/index.html
@@ -95,22 +95,7 @@
         </ul>
       </div>
 
-      <nav aria-label="...">
-        <ul class="pagination">
-          <li class="page-item disabled">
-            <span class="page-link">Previous</span>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item active" aria-current="page">
-            <span class="page-link">2</span>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#">Next</a>
-          </li>
-        </ul>
-      </nav>
-
+      
 
 
 
@@ -122,6 +107,9 @@
       <img src="./banner.webp" class="img-fluid" alt="...">
       <h1>Best of Electronics</h1>
       <img src="img1.jpg" class="img-fluid" width="30%" alt="...">
+      <img src="img60.webp" class="img-fluid" width="30%" alt="...">
+      <img src="img61.jpg" class="img-fluid" width="30%" alt="...">
+      <img src="img62.webp" class="img-fluid" width="30%" alt="...">
       <img src="img2.webp" class="img-fluid" width="30%" alt="...">
       <h1>Beauty, Food, Toys & More</h1>
       <img src="img3.webp" class="img-fluid" width="30%" alt="...">
@@ -255,6 +243,22 @@
   <div class="col-12">
     <button type="submit" class="btn btn-primary">Sign in</button>
   </div>
+  <nav aria-label="...">
+    <ul class="pagination">
+      <li class="page-item disabled">
+        <span class="page-link">Previous</span>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item active" aria-current="page">
+        <span class="page-link">2</span>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#">Next</a>
+      </li>
+    </ul>
+  </nav>
+
 <footer>
     <a href="#">FAQ</a>
     <a href="#">Contact Us</a>
