--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="#">Top Fashion deals</a>
               </li>
               <li class="nav-item Sign in">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="Log in" aria-expanded="false">
                   Log in
                 </a>
                 <ul class="dropdown-menu">
@@ -52,17 +52,17 @@
                   <h4>Only show products in stock.</h4>
                 </label>
               </form>
-
-
-
-
-
-
-
-
-
-
-
+              <div class="Became a Sellers">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Became a Sellers
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Register</a></li>
+                  <li><a class="dropdown-item" href="#">Log in</a></li>
+                  <li><a class="dropdown-item" href="#">Seller Payments</a></li>
+                </ul>
+              </div>
+        
             </form>
           </div>
         </div>
@@ -83,34 +83,18 @@
         Appliances
         <img src="./Appliances.webp" width="25%" class="img-fluid" alt="...">
       </button>
-
-      <div class="Became a Sellers">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Became a Sellers
-        </button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Register</a></li>
-          <li><a class="dropdown-item" href="#">Log in</a></li>
-          <li><a class="dropdown-item" href="#">Seller Payments</a></li>
-        </ul>
-      </div>
-
-      
-
-
-
-
-
-
-
-
-      <img src="./banner.webp" class="img-fluid" alt="...">
+      <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="left" data-bs-content="right popover">
+        Two Wheelers Scoty Accessories
+        <img src="./Two Wheelers.webp" width="20%" class="img-fluid" alt="...">
+      </button>
+      <img src="./banner4.webp" class="img-fluid" width="100%" alt="...">
+      <img src="./Banner3.webp" class="img-fluid" width="100%" alt="...">
       <h1>Best of Electronics</h1>
-      <img src="img1.jpg" class="img-fluid" width="30%" alt="...">
-      <img src="img60.webp" class="img-fluid" width="30%" alt="...">
-      <img src="img61.jpg" class="img-fluid" width="30%" alt="...">
-      <img src="img62.webp" class="img-fluid" width="30%" alt="...">
-      <img src="img2.webp" class="img-fluid" width="30%" alt="...">
+      <img src="img1.jpg" class="img-fluid" width="20%" alt="...">
+      <img src="img60.webp" class="img-fluid" width="20%" alt="...">
+      <img src="img61.jpg" class="img-fluid" width="20%" alt="...">
+      <img src="img62.webp" class="img-fluid" width="20%" alt="...">
+      <img src="img2.webp" class="img-fluid" width="20%" alt="...">
       <h1>Beauty, Food, Toys & More</h1>
       <img src="img3.webp" class="img-fluid" width="30%" alt="...">
       <img src="img5.jpeg" class="img-fluid" width="30%" alt="...">
@@ -180,16 +164,7 @@
       <img src="img29.jpg" class="img-fluid" width="20%" alt="...">
       <img src="img38.jpg" class="img-fluid" width="20%" alt="...">
       <var></var>
-      <section>
-        <h2>
-            Our Founder MyShopzon By Priyanshu Jaiswal
-        </h2>
-        <img src="founder.png" alt="This is Priyanshu Jaiswal">
-        <h3>Priyanshu jaiswal</h3>
-        <img src="logomyshopzop.png" class="img-fluid" width="20%" alt="...">
-        <h3>MyShopZon</h3>
-        <a href=""></a>
-    </section>
+    <sectiona>
     <h1>Log in/sign Up</h1>
 </main>
 <div class="row g-3">
@@ -243,7 +218,8 @@
   <div class="col-12">
     <button type="submit" class="btn btn-primary">Sign in</button>
   </div>
-  <nav aria-label="...">
+</sectionb>
+  <nava aria-label="...">
     <ul class="pagination">
       <li class="page-item disabled">
         <span class="page-link">Previous</span>
@@ -257,7 +233,19 @@
         <a class="page-link" href="#">Next</a>
       </li>
     </ul>
-  </nav>
+  </nava>
+  <section>
+    <h2>
+        Our Founder MyShopzon By Priyanshu Jaiswal
+    </h2>
+    <img src="founder.png" alt="This is Priyanshu Jaiswal">
+    <h3>Priyanshu jaiswal</h3>
+    <img src="logomyshopzop.png" class="img-fluid" width="20%" alt="...">
+    <h3>MyShopZon</h3>
+    <a href=""></a>
+</section>
+
+
 
 <footer>
     <a href="#">FAQ</a>
